# sea-battle

./: .gitignore  CMakeLists.txt  Ivanov_Stepan_oop_lb1.docx  Ivanov_Stepan_oop_lb2.docx  Ivanov_Stepan_oop_lb3.docx  main.cpp
seagame/: CMakeLists.txt  __plug_for_react.h  _last_skill_result.h  add_random_skill.h  command.h  double_hit.h  double_hit_factory.h  extract_error.h  field.h  file.h  game.h  game_state.h  iSkill.h  iSkill_factory.h  observer.h  out_of_field.h  out_of_field_error.h  owner.h  placement_error.h  rocket_attack.h  rocket_attack_factory.h  scanner.h  scanner_factory.h  setup_react_of_destroyed_ship.h  ship.h  ship_manager.h  skill.h  skill_factory.h  skill_manager.h  skill_name.h  skill_production.h  unit.h  visitor.h  void.h
seagame/serialization/: CMakeLists.txt  serialazer.h
seagame/src/: _last_skill_result.cpp  add_random_skill.cpp  command.cpp  double_hit.cpp  double_hit_factory.cpp  field.cpp  file.cpp  game.cpp  game_state.cpp  iSkill.cpp  iSkill_factory.cpp  observer.cpp  owner.cpp  rocket_attack.cpp  rocket_attack_factory.cpp  scanner.cpp  scanner_factory.cpp  setup_react_of_destroyed_ship.cpp  ship.cpp  ship_manager.cpp  skill.cpp  skill_factory.cpp  skill_manager.cpp  skill_name.cpp  skill_production.cpp  unit.cpp  visitor.cpp
serialization/: CMakeLists.txt  dll_def.h  double_hit_serializer.h  export.h  field_loader.h  field_serializer.h  field_size_loader.h  field_size_serializer.h  game_state_loader.h  game_state_serializer.h  json.h  loader.h  scanner_serializer.h  serializer.h  ship_loader.h  ship_manager_loader.h  ship_manager_serializer.h  ship_serializer.h  skill_manager_loader.h  skill_manager_serializer.h  unit_loader.h  unit_serializer.h
serialization/src/: double_hit_serializer.cpp  export.cpp  field_loader.cpp  field_serializer.cpp  field_size_loader.cpp  field_size_serializer.cpp  game_state_loader.cpp  game_state_serializer.cpp  json.cpp  loader.cpp  scanner_serializer.cpp  serializer.cpp  ship_loader.cpp  ship_manager_loader.cpp  ship_manager_serializer.cpp  ship_serializer.cpp  skill_manager_loader.cpp  skill_manager_serializer.cpp  unit_loader.cpp  unit_serializer.cpp
src/: CMakeLists.txt
src/seagame/: field.h  list.h  ship.h  ship_manager.h  unit.h
src/seagame/src/: field.cpp  list.cpp  ship.cpp  ship_manager.cpp  unit.cpp
utils/: CMakeLists.txt  dll.h  serialization_dll.h
utils/src/: dll.cpp  serialization_dll.cpp
